--- a/pom.xml
+++ b/pom.xml
@@ -397,5 +397,10 @@
             <artifactId>jackson-module-kotlin</artifactId>
             <version>2.9.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.fifesoft</groupId>
+            <artifactId>rsyntaxtextarea</artifactId>
+            <version>3.1.2</version>
+        </dependency>
     </dependencies>
 </project>
