--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.change_vision.astah.plugins</groupId>
     <artifactId>plantuml-plugin</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
     <name>%bundle.name</name>
     <description>%bundle.description</description>
@@ -352,7 +352,7 @@
             <artifactId>astah-api</artifactId>
             <version>${astah.version}</version>
             <scope>system</scope>
-            <systemPath>${emb.astahPath}/astah-api.jar</systemPath>
+            <systemPath>${astahPath}/astah-api.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
