--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <plugin.install>true</plugin.install>
         <astah.version>6.7</astah.version>
         <astah.edition>all</astah.edition>
-        <kotlin.version>1.4.30-RC</kotlin.version>
+        <kotlin.version>1.4.31</kotlin.version>
         <serialization.version>1.1.0</serialization.version>
         <astahPath>C:/Program Files/astah-professional</astahPath>
     </properties>
@@ -402,11 +402,6 @@
             <groupId>net.sourceforge.plantuml</groupId>
             <artifactId>plantuml</artifactId>
             <version>1.2021.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-kotlin</artifactId>
-            <version>2.9.5</version>
         </dependency>
         <dependency>
             <groupId>com.fifesoft</groupId>
