--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,14 @@
         <plugin.install>true</plugin.install>
         <astah.version>9.0.0</astah.version>
         <astah.depend.version>9.0.0</astah.depend.version>
-        <astah.edition>all</astah.edition>
+        <astah.edition>pro,uml</astah.edition>
         <kotlin.version>1.9.25</kotlin.version>
         <serialization.version>1.1.0</serialization.version>
     </properties>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.change_vision.astah.plugins</groupId>
     <artifactId>plantuml-plugin</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>bundle</packaging>
     <name>%bundle.name</name>
     <description>%bundle.description</description>
